lab2/lab2_ws/log/build_2023-07-22_11-32-10/safety_node/stderr.log
  File "/root/F1Tenth-Labs/lab2/lab2_ws/install/safety_node/lib/python3.8/site-packages/safety_node/safety_node.py", line 29
    return if len(iTTC) != 0: max(iTTC)
           ^
SyntaxError: invalid syntax

